(fix): viet translation

--- a/src/locale/Minds.vi.xliff
+++ b/src/locale/Minds.vi.xliff
@@ -1450,8 +1450,8 @@
         <target>Đang dịch</target>
       </trans-unit>
       <trans-unit id="TRANSLATE__TRANSLATING_TO_PART">
-        <source>to <x id="START_BOLD_TEXT" ctype="x-b" equiv-text="&lt;b&gt;" /><x id="INTERPOLATION" /><x id="CLOSE_BOLD_TEXT" ctype="x-b" equiv-text="&lt;/b&gt;" /></source>
-        <target>sang <x id="START_BOLD_TEXT" ctype="x-b" equiv-text="&lt;b&gt;" /><x id="INTERPOLATION" />{{id="CLOSE_BOLD_TEXT" ctype="x-b" equiv-text="&lt;/b&gt;"}</target>
+        <source>to <x id="INTERPOLATION" /></source>
+        <target>sang <x id="INTERPOLATION" /></target>
         <note>Translation target</note>
       </trans-unit>
       <trans-unit id="TRANSLATE__TRANSLATED_LABEL">
