--- a/src/locale/Base.xlf
+++ b/src/locale/Base.xlf
@@ -12713,6 +12713,14 @@
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
+      <trans-unit id="TRENDING__TAGS" datatype="html">
+        <source>Trending Tags</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/discovery/tags/sidebar-tags.component.html</context>
+          <context context-type="linenumber">1</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
       <trans-unit id="DISCOVERY_SETTINGS__SAVE_TAGS" datatype="html">
         <source>Save Tags</source>
         <context-group purpose="location">
